# Merv

./: .gitignore  Architecture_Rubric.md  Feed_PRD.md  MIGRATING.md  README.md  ReadME.md  architecture_analysis.md  architecture_review_1:32:AM:June21.md
research_plugin/: .env.example  .gitignore  .mcp.codex.json  .mcp.json  GEMINI.md  README.md  gemini-extension.json  mcp.json  plugin_improvement_progress.md  pyproject.toml  requirements.txt  startup.txt
research_plugin/.claude-plugin/: plugin.json
research_plugin/.codex-plugin/: plugin.json
research_plugin/.cursor-plugin/: plugin.json
research_plugin/agents/: design-review.md  experiment-attempt-review.md  experiment-design-review.md  experiment-review.md  project-reflection-review.md
research_plugin/backend/: __init__.py  app.py  client_cli.py  config.py  contracts.py  control_app.py  control_client.py  control_runtime.py  daemon_http.py  daemon_loopback.py  feed_contracts.py  feed_http.py  http_api.py  http_policy.py  http_server.py  import_tool.py  local_mlflow.py  local_runtime.py  mlflow_metrics.py  observability.py  project_router.py  record_core.py  sandbox_support.py  sync_config.py  tool_facade.py  tool_handlers.py  utils.py  version.py  workspace.py
research_plugin/deploy/: .env.example  Dockerfile  Procfile  README.md  docker-compose.yml  doctor.py
research_plugin/docs/: ARCHITECTURE.md  AUTH.md  CENTRALIZED_MLFLOW.md  CLAUDE_FRONTEND_HANDOFF.md  CLIENTS.md  CLOUD_BACKEND_MIGRATION_PLAN.md  CONTROL_DATA_PLANE_SPLIT.md  CONTROL_PLANE_OPERATIONS.md  HOSTED_CLIENT_QUICKSTART.md  MOBILE_UX_REVIEW.md  (+11 more)
(+989 files in other folders)
